--- a/app/src/main/res/layout/media_display_sheet_category.xml
+++ b/app/src/main/res/layout/media_display_sheet_category.xml
@@ -14,10 +14,14 @@
             android:paddingRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <androidx.recyclerview.widget.RecyclerView
-                binding:adapter="@{categoryModel.categoryAdapter}"
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+                <androidx.recyclerview.widget.RecyclerView
+                    binding:adapter="@{categoryModel.categoryAdapter}"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </LinearLayout>
 
 </layout>
