--- a/app/src/main/res/layout/item_sheet_media.xml
+++ b/app/src/main/res/layout/item_sheet_media.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:layout_marginBottom="2dp"
         android:minHeight="@dimen/listItemSizeSmall">
         <TextView
             android:id="@+id/itemSheetMedia_positionTV"
@@ -31,7 +32,7 @@
             android:orientation="vertical"
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <TextView
                 android:textSize="@dimen/textTitle"
                 android:textColor="@color/textTitle"
