--- a/app/src/main/res/layout/activity_transport.xml
+++ b/app/src/main/res/layout/activity_transport.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"/>
             <TextView
                 android:layout_marginLeft="3dp"
-                android:text="🔽 2"
+                android:text="🔽= 2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
