--- a/app/src/main/res/layout/media_display_all_medias.xml
+++ b/app/src/main/res/layout/media_display_all_medias.xml
@@ -2,14 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:binding="http://schemas.android.com/apk/res-auto">
     <data>
-        <import type="android.view.View"/>
         <variable
             name="vm"
             type="com.merlin.model.MediaDisplayAllMediasModel" />
-
     </data>
     <LinearLayout
         android:padding="@dimen/contentGap"
+        binding:createModel="@{true}"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
