--- a/app/src/main/res/layout/item_media_all.xml
+++ b/app/src/main/res/layout/item_media_all.xml
@@ -12,7 +12,7 @@
             name="playing"
             type="boolean" />
         <import type="android.view.View"/>
-        <import type="com.merlin.view.MultiClicker"/>
+        <import type="com.merlin.view.Clicker"/>
     </data>
 
      <RelativeLayout
