--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -3,4 +3,5 @@
     <item name="resourceId" type="id"/>
     <item name="viewResource" type="id"/>
     <item name="modelBind" type="id"/>
+    <item name="interruptClick" type="id"/>
 </resources>
