--- a/app/src/main/res/layout/item_context_menu.xml
+++ b/app/src/main/res/layout/item_context_menu.xml
@@ -21,7 +21,7 @@
             binding:enableClick="@{Clicker.click(Clicker.SINGLE_TAP_MASK|Clicker.SINGLE_LONG_CLICK_MASK,menu.arg,true)}"
             android:minWidth="150dp"
             android:minHeight="20dp"
-            android:text="@{menu.textId}"
+            android:text="@{menu.text}"
             android:textSize="@dimen/textTitle"
             android:textColor="@color/textTitle"
             android:textStyle="bold"/>
