--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -16,9 +16,10 @@
             type="int" />
         <import type="android.view.View"/>
         <import type="com.merlin.view.Clicker"/>
+        <import type="com.merlin.util.Time"/>
     </data>
     <RelativeLayout
-        binding:enableClick="@{Clicker.click(meta,true)}"
+        binding:enableClick="@{Clicker.multiClick(meta,true)}"
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:clickable="true"
@@ -47,14 +48,20 @@
                 android:text="@{meta.title??meta.name}"
                 android:textColor="@color/textTitle"
                 android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/itemListFile_sub"
-                android:textSize="@dimen/textSmall"
-                android:singleLine="true"
-                android:textColor="@color/textTitleSub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/titleSmallTextView"
+                    android:text="@{meta.directory?`(`+(meta.childCount)+`)`:(meta.extension??``)}"/>
+                <TextView
+                style="@style/titleSmallTextView"
+                android:text="@{Time.formatTime((long)meta.modifyTime)}"/>
+                <TextView
+                    style="@style/titleSmallTextView"
+                    android:text="@{``+meta.permissions}"/>
+            </LinearLayout>
         </LinearLayout>
         <CheckBox
             android:id="@+id/itemListFile_selectCB"
