--- a/app/src/main/res/layout/file_context_menu.xml
+++ b/app/src/main/res/layout/file_context_menu.xml
@@ -15,6 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include layout="@layout/item_context_menu"
+            android:visibility="@{file.directory?View.VISIBLE:View.GONE}"
+            binding:menu="@{ContextMenu.create(R.string.upload,file)}"/>
+        <include layout="@layout/item_context_menu"
+            android:visibility="@{file.directory?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.download,file)}"/>
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.move,file)}"/>
