--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content">
                 <TextView
                     style="@style/titleSmallTextView"
-                    android:text="@{meta.directory?`(`+(meta.childCount)+`)`:(meta.extension??``)}"/>
+                    android:text="@{meta.directory?`(`+(meta.size)+`)`:(meta.extension??``)}"/>
                 <TextView
                 style="@style/titleSmallTextView"
                 android:text="@{Time.formatTime((long)meta.modifyTime)}"/>
