--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -3,14 +3,17 @@
     xmlns:binding="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="sureTextId"
-            type="int" />
+            name="leftText"
+            type="Object" />
         <variable
-            name="cancelTextId"
-            type="int" />
+            name="rightText"
+            type="Object" />
         <variable
-            name="titleTextId"
-            type="int" />
+            name="titleText"
+            type="Object" />
+        <variable
+            name="messageText"
+            type="Object" />
         <variable
             name="contentLayout"
             type="Object" />
@@ -30,11 +33,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:text="@{titleTextId==Resources.ID_NULL?``:titleTextId}"
-                android:visibility="@{titleTextId==Resources.ID_NULL?View.GONE:View.VISIBLE}"
+                android:text="@{titleText==null?``:titleText}"
+                android:visibility="@{titleText==null?View.GONE:View.VISIBLE}"
                 android:layout_marginBottom="15dp"
                 style="@style/titleNormalTextView"/>
-
+        <TextView
+            android:text="@{messageText==null?``:messageText}"
+            android:visibility="@{messageText==null?View.GONE:View.VISIBLE}"
+            android:layout_marginBottom="15dp"
+            style="@style/titleNormalTextView"/>
             <FrameLayout
                 android:visibility="@{null!=contentLayout?View.VISIBLE:View.GONE}"
                 binding:layout="@{contentLayout}"
@@ -44,7 +51,7 @@
             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:visibility="@{sureTextId!=Resources.ID_NULL||cancelTextId!=Resources.ID_NULL?View.VISIBLE:View.GONE}"
+                android:visibility="@{leftText!=null||rightText!=null?View.VISIBLE:View.GONE}"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
@@ -52,16 +59,16 @@
                     android:layout_weight="1"
                     android:padding="8dp"
                     binding:enableClick="@{true}"
-                    android:text="@{sureTextId==Resources.ID_NULL?``:sureTextId}"
-                    android:visibility="@{sureTextId==Resources.ID_NULL?View.GONE:View.VISIBLE}"
+                    android:text="@{leftText==null?``:leftText}"
+                    android:visibility="@{leftText==null?View.GONE:View.VISIBLE}"
                     android:background="@drawable/selector_round_dark_corner_small"
                     style="@style/titleNormalTextView"/>
                 <TextView
                     android:layout_weight="1"
                     android:padding="8dp"
                     binding:enableClick="@{true}"
-                    android:text="@{cancelTextId==Resources.ID_NULL?``:cancelTextId}"
-                    android:visibility="@{cancelTextId==Resources.ID_NULL?View.GONE:View.VISIBLE}"
+                    android:text="@{rightText==null?``:rightText}"
+                    android:visibility="@{rightText==null?View.GONE:View.VISIBLE}"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/selector_round_dark_corner_small"
                     style="@style/titleNormalTextView"/>
