--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,9 +51,10 @@
     <style name="buttonStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@color/textTitle</item>
-        <item name="android:padding">6dp</item>
-        <item name="android:background">@drawable/round_corner_small</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:background">@drawable/selector_round_dark_corner_small</item>
     </style>
     <style name="sheetCategoryTitleStyle" parent="titleNormalTextView">
             <item name="android:layout_margin">3dp</item>
